--- a/Brian Ngo/src/Obesity_Brian.ipynb
+++ b/Brian Ngo/src/Obesity_Brian.ipynb
@@ -1117,7 +1117,8 @@
    "source": [
     "# Use Random Forest Classifer to classify which eating habits and physical conditions most significantly predict obesity levels, as categorized by the NObesity classification system\n",
     "\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n"
    ]
   },
